force-app/main/default/objects/Applicant_Citizenship__c/Applicant_Citizenship__c.object-meta.xml
<CustomObject>
    <label>Applicant Citizenship</label>
    <nameField>
        <displayFormat>APPCZ-{0000}</displayFormat>
        <label>Applicant Citizenship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Citizenships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>