force-app/main/default/objects/Applicant_Citizenship__c/fields/Applicant_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Full_Name__c</fullName>
    <formula>Applicant__r.First_Name__c +&apos;  &apos;+  Applicant__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Full Name</label>
    <type>Text</type>
</CustomField>