force-app/main/default/objects/Applicant_Citizenship__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <referenceTo>Citizenship__c</referenceTo>
    <relationshipLabel>Applicant Citizenships</relationshipLabel>
    <relationshipName>Applicant_Citizenships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>